src/main/metadata/objects/Vehicle_Model_Mapping__c.object
<CustomObject>
    <description>Contact Portfolio: Mapping object used by EP to get correct vehicle model description from incorrect model description</description>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSI_Model__c</fullName>
        <label>SSI Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Model__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Source Model</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Target_Model__c</fullName>
        <label>Target Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Vehicle Model Mapping</label>
    <nameField>
        <displayFormat>VMM-{000000}</displayFormat>
        <label>Vehicle Model Mapping Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Model Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>